// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. a primary image 1`] = `
<div>
  <div
    id="article-marketing-header"
  />
  <article
    data-article-identifier="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
    data-article-sectionname="Some Section"
    data-article-template="mainstandard"
    id="article-main"
  >
    <Head
      swgProductId={null}
    />
    <div>
      <AdContainer
        slotName="header"
      />
    </div>
    <main>
      <div />
      <div>
        <div>
          <div>
            <div>
              <div>
                <div>
                  <a
                    href="https://www.thetimes.co.uk/puzzles"
                  >
                    <span />
                  </a>
                  <div>
                    <h3>
                      Puzzles
                    </h3>
                    <button
                      size="small"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        fill="currentcolor"
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 0h24v24H0z"
                          fill="none"
                        />
                        <path
                          d="m12 8-6 6 1.41 1.41L12 10.83l4.59 4.58L18 14z"
                          fill="currentcolor"
                        />
                      </svg>
                    </button>
                  </div>
                </div>
                <p>
                  Challenge yourself with today’s puzzles.
                </p>
              </div>
            </div>
            <hr
              aria-hidden={true}
            />
            <div>
              <div>
                <picture>
                  <div>
                    <div>
                      <svg
                        aria-hidden="true"
                        fill="currentColor"
                        focusable="false"
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 0h24v24H0V0z"
                          fill="none"
                        />
                        <path
                          d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-4.86 8.86l-3 3.87L9 13.14 6 17h12l-3.86-5.14z"
                        />
                      </svg>
                    </div>
                  </div>
                  <img
                    alt="Puzzle thumbnail"
                    src="https://www.thetimes.co.uk/imageserver/image/%2Fpuzzles%2Ficons%2F33b27655-dcc9-421f-906f-b2b10dd26865.png?crop=1250%2C833%2C0%2C0&resize=500"
                    width="40px"
                  />
                </picture>
              </div>
              <a
                href="https://www.thetimes.co.uk/puzzles/crossword"
              >
                <span />
              </a>
              <div>
                <p>
                  Crossword
                </p>
              </div>
            </div>
            <hr
              aria-hidden={true}
            />
            <div>
              <div>
                <picture>
                  <div>
                    <div>
                      <svg
                        aria-hidden="true"
                        fill="currentColor"
                        focusable="false"
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 0h24v24H0V0z"
                          fill="none"
                        />
                        <path
                          d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-4.86 8.86l-3 3.87L9 13.14 6 17h12l-3.86-5.14z"
                        />
                      </svg>
                    </div>
                  </div>
                  <img
                    alt="Puzzle thumbnail"
                    src="https://www.thetimes.co.uk/imageserver/image/%2Fpuzzles%2Ficons%2F33b27655-dcc9-421f-906f-b2b10dd26865.png?crop=1250%2C833%2C0%2C0&resize=500"
                    width="40px"
                  />
                </picture>
              </div>
              <a
                href="https://www.thetimes.co.uk/puzzles/word-puzzles"
              >
                <span />
              </a>
              <div>
                <p>
                  Polygon
                </p>
              </div>
            </div>
            <hr
              aria-hidden={true}
            />
            <div>
              <div>
                <picture>
                  <div>
                    <div>
                      <svg
                        aria-hidden="true"
                        fill="currentColor"
                        focusable="false"
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 0h24v24H0V0z"
                          fill="none"
                        />
                        <path
                          d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-4.86 8.86l-3 3.87L9 13.14 6 17h12l-3.86-5.14z"
                        />
                      </svg>
                    </div>
                  </div>
                  <img
                    alt="Puzzle thumbnail"
                    src="https://www.thetimes.co.uk/imageserver/image/%2Fpuzzles%2Ficons%2F33b27655-dcc9-421f-906f-b2b10dd26865.png?crop=1250%2C833%2C0%2C0&resize=500"
                    width="40px"
                  />
                </picture>
              </div>
              <a
                href="https://www.thetimes.co.uk/puzzles/sudoku"
              >
                <span />
              </a>
              <div>
                <p>
                  Sudoku
                </p>
              </div>
            </div>
            <hr
              aria-hidden={true}
            />
          </div>
        </div>
      </div>
      <article>
        <div
          id="0"
        >
          <div>
            <div>
              <ArticleImage
                captionOptions={
                  Object {
                    "caption": "A Caption",
                    "credits": "Some Credits",
                  }
                }
                imageOptions={
                  Object {
                    "display": "primary",
                    "highResSize": null,
                    "lowResQuality": 3,
                    "lowResSize": 400,
                    "ratio": "3:2",
                    "uri": "https://image-2.io",
                  }
                }
              />
            </div>
          </div>
        </div>
        <div>
          <h2>
            Sponsored
          </h2>
          <div
            data-parent="group-3"
            id="advert-inarticle-native-1"
          />
          <div
            data-parent="group-3"
            id="advert-inarticle-native-2"
          />
        </div>
        <div
          id="paywall-portal-article-footer"
        />
        <ArticleExtras
          articleHeadline="Some Headline"
          articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
          articleUrl="https://url.io"
          commentingConfig={
            Object {
              "account": "dummiy-spotim-id",
            }
          }
          commentsEnabled={true}
          publishedTime="2015-03-13T18:54:58.000Z"
          relatedArticlesVisible={false}
          savingEnabled={true}
          section="Some Section"
          sharingEnabled={true}
        />
      </article>
    </main>
    <AdContainer
      slotName="pixel"
    />
    <AdContainer
      slotName="pixelteads"
    />
    <AdContainer
      slotName="pixelskin"
    />
  </article>
</div>
`;

exports[`2. a fullwidth image 1`] = `
<div>
  <div
    id="article-marketing-header"
  />
  <article
    data-article-identifier="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
    data-article-sectionname="Some Section"
    data-article-template="mainstandard"
    id="article-main"
  >
    <Head
      swgProductId={null}
    />
    <div>
      <AdContainer
        slotName="header"
      />
    </div>
    <main>
      <div />
      <div>
        <div>
          <div>
            <div>
              <div>
                <div>
                  <a
                    href="https://www.thetimes.co.uk/puzzles"
                  >
                    <span />
                  </a>
                  <div>
                    <h3>
                      Puzzles
                    </h3>
                    <button
                      size="small"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        fill="currentcolor"
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 0h24v24H0z"
                          fill="none"
                        />
                        <path
                          d="m12 8-6 6 1.41 1.41L12 10.83l4.59 4.58L18 14z"
                          fill="currentcolor"
                        />
                      </svg>
                    </button>
                  </div>
                </div>
                <p>
                  Challenge yourself with today’s puzzles.
                </p>
              </div>
            </div>
            <hr
              aria-hidden={true}
            />
            <div>
              <div>
                <picture>
                  <div>
                    <div>
                      <svg
                        aria-hidden="true"
                        fill="currentColor"
                        focusable="false"
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 0h24v24H0V0z"
                          fill="none"
                        />
                        <path
                          d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-4.86 8.86l-3 3.87L9 13.14 6 17h12l-3.86-5.14z"
                        />
                      </svg>
                    </div>
                  </div>
                  <img
                    alt="Puzzle thumbnail"
                    src="https://www.thetimes.co.uk/imageserver/image/%2Fpuzzles%2Ficons%2F33b27655-dcc9-421f-906f-b2b10dd26865.png?crop=1250%2C833%2C0%2C0&resize=500"
                    width="40px"
                  />
                </picture>
              </div>
              <a
                href="https://www.thetimes.co.uk/puzzles/crossword"
              >
                <span />
              </a>
              <div>
                <p>
                  Crossword
                </p>
              </div>
            </div>
            <hr
              aria-hidden={true}
            />
            <div>
              <div>
                <picture>
                  <div>
                    <div>
                      <svg
                        aria-hidden="true"
                        fill="currentColor"
                        focusable="false"
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 0h24v24H0V0z"
                          fill="none"
                        />
                        <path
                          d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-4.86 8.86l-3 3.87L9 13.14 6 17h12l-3.86-5.14z"
                        />
                      </svg>
                    </div>
                  </div>
                  <img
                    alt="Puzzle thumbnail"
                    src="https://www.thetimes.co.uk/imageserver/image/%2Fpuzzles%2Ficons%2F33b27655-dcc9-421f-906f-b2b10dd26865.png?crop=1250%2C833%2C0%2C0&resize=500"
                    width="40px"
                  />
                </picture>
              </div>
              <a
                href="https://www.thetimes.co.uk/puzzles/word-puzzles"
              >
                <span />
              </a>
              <div>
                <p>
                  Polygon
                </p>
              </div>
            </div>
            <hr
              aria-hidden={true}
            />
            <div>
              <div>
                <picture>
                  <div>
                    <div>
                      <svg
                        aria-hidden="true"
                        fill="currentColor"
                        focusable="false"
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 0h24v24H0V0z"
                          fill="none"
                        />
                        <path
                          d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-4.86 8.86l-3 3.87L9 13.14 6 17h12l-3.86-5.14z"
                        />
                      </svg>
                    </div>
                  </div>
                  <img
                    alt="Puzzle thumbnail"
                    src="https://www.thetimes.co.uk/imageserver/image/%2Fpuzzles%2Ficons%2F33b27655-dcc9-421f-906f-b2b10dd26865.png?crop=1250%2C833%2C0%2C0&resize=500"
                    width="40px"
                  />
                </picture>
              </div>
              <a
                href="https://www.thetimes.co.uk/puzzles/sudoku"
              >
                <span />
              </a>
              <div>
                <p>
                  Sudoku
                </p>
              </div>
            </div>
            <hr
              aria-hidden={true}
            />
          </div>
        </div>
      </div>
      <article>
        <div
          id="0"
        >
          <div>
            <div>
              <ArticleImage
                captionOptions={
                  Object {
                    "caption": "A Caption",
                    "credits": "Some Credits",
                  }
                }
                imageOptions={
                  Object {
                    "display": "fullwidth",
                    "highResSize": null,
                    "lowResQuality": 3,
                    "lowResSize": 400,
                    "ratio": "3:2",
                    "uri": "https://image-2.io",
                  }
                }
              />
            </div>
          </div>
        </div>
        <div>
          <h2>
            Sponsored
          </h2>
          <div
            data-parent="group-3"
            id="advert-inarticle-native-1"
          />
          <div
            data-parent="group-3"
            id="advert-inarticle-native-2"
          />
        </div>
        <div
          id="paywall-portal-article-footer"
        />
        <ArticleExtras
          articleHeadline="Some Headline"
          articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
          articleUrl="https://url.io"
          commentingConfig={
            Object {
              "account": "dummiy-spotim-id",
            }
          }
          commentsEnabled={true}
          publishedTime="2015-03-13T18:54:58.000Z"
          relatedArticlesVisible={false}
          savingEnabled={true}
          section="Some Section"
          sharingEnabled={true}
        />
      </article>
    </main>
    <AdContainer
      slotName="pixel"
    />
    <AdContainer
      slotName="pixelteads"
    />
    <AdContainer
      slotName="pixelskin"
    />
  </article>
</div>
`;

exports[`3. a secondary image 1`] = `
<div>
  <div
    id="article-marketing-header"
  />
  <article
    data-article-identifier="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
    data-article-sectionname="Some Section"
    data-article-template="mainstandard"
    id="article-main"
  >
    <Head
      swgProductId={null}
    />
    <div>
      <AdContainer
        slotName="header"
      />
    </div>
    <main>
      <div />
      <div>
        <div>
          <div>
            <div>
              <div>
                <div>
                  <a
                    href="https://www.thetimes.co.uk/puzzles"
                  >
                    <span />
                  </a>
                  <div>
                    <h3>
                      Puzzles
                    </h3>
                    <button
                      size="small"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        fill="currentcolor"
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 0h24v24H0z"
                          fill="none"
                        />
                        <path
                          d="m12 8-6 6 1.41 1.41L12 10.83l4.59 4.58L18 14z"
                          fill="currentcolor"
                        />
                      </svg>
                    </button>
                  </div>
                </div>
                <p>
                  Challenge yourself with today’s puzzles.
                </p>
              </div>
            </div>
            <hr
              aria-hidden={true}
            />
            <div>
              <div>
                <picture>
                  <div>
                    <div>
                      <svg
                        aria-hidden="true"
                        fill="currentColor"
                        focusable="false"
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 0h24v24H0V0z"
                          fill="none"
                        />
                        <path
                          d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-4.86 8.86l-3 3.87L9 13.14 6 17h12l-3.86-5.14z"
                        />
                      </svg>
                    </div>
                  </div>
                  <img
                    alt="Puzzle thumbnail"
                    src="https://www.thetimes.co.uk/imageserver/image/%2Fpuzzles%2Ficons%2F33b27655-dcc9-421f-906f-b2b10dd26865.png?crop=1250%2C833%2C0%2C0&resize=500"
                    width="40px"
                  />
                </picture>
              </div>
              <a
                href="https://www.thetimes.co.uk/puzzles/crossword"
              >
                <span />
              </a>
              <div>
                <p>
                  Crossword
                </p>
              </div>
            </div>
            <hr
              aria-hidden={true}
            />
            <div>
              <div>
                <picture>
                  <div>
                    <div>
                      <svg
                        aria-hidden="true"
                        fill="currentColor"
                        focusable="false"
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 0h24v24H0V0z"
                          fill="none"
                        />
                        <path
                          d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-4.86 8.86l-3 3.87L9 13.14 6 17h12l-3.86-5.14z"
                        />
                      </svg>
                    </div>
                  </div>
                  <img
                    alt="Puzzle thumbnail"
                    src="https://www.thetimes.co.uk/imageserver/image/%2Fpuzzles%2Ficons%2F33b27655-dcc9-421f-906f-b2b10dd26865.png?crop=1250%2C833%2C0%2C0&resize=500"
                    width="40px"
                  />
                </picture>
              </div>
              <a
                href="https://www.thetimes.co.uk/puzzles/word-puzzles"
              >
                <span />
              </a>
              <div>
                <p>
                  Polygon
                </p>
              </div>
            </div>
            <hr
              aria-hidden={true}
            />
            <div>
              <div>
                <picture>
                  <div>
                    <div>
                      <svg
                        aria-hidden="true"
                        fill="currentColor"
                        focusable="false"
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 0h24v24H0V0z"
                          fill="none"
                        />
                        <path
                          d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-4.86 8.86l-3 3.87L9 13.14 6 17h12l-3.86-5.14z"
                        />
                      </svg>
                    </div>
                  </div>
                  <img
                    alt="Puzzle thumbnail"
                    src="https://www.thetimes.co.uk/imageserver/image/%2Fpuzzles%2Ficons%2F33b27655-dcc9-421f-906f-b2b10dd26865.png?crop=1250%2C833%2C0%2C0&resize=500"
                    width="40px"
                  />
                </picture>
              </div>
              <a
                href="https://www.thetimes.co.uk/puzzles/sudoku"
              >
                <span />
              </a>
              <div>
                <p>
                  Sudoku
                </p>
              </div>
            </div>
            <hr
              aria-hidden={true}
            />
          </div>
        </div>
      </div>
      <article>
        <div
          id="0"
        >
          <div>
            <div>
              <ArticleImage
                captionOptions={
                  Object {
                    "caption": "A Caption",
                    "credits": "Some Credits",
                  }
                }
                imageOptions={
                  Object {
                    "display": "secondary",
                    "highResSize": null,
                    "lowResQuality": 3,
                    "lowResSize": 400,
                    "ratio": "3:2",
                    "uri": "https://image-2.io",
                  }
                }
              />
            </div>
          </div>
        </div>
        <div>
          <h2>
            Sponsored
          </h2>
          <div
            data-parent="group-3"
            id="advert-inarticle-native-1"
          />
          <div
            data-parent="group-3"
            id="advert-inarticle-native-2"
          />
        </div>
        <div
          id="paywall-portal-article-footer"
        />
        <ArticleExtras
          articleHeadline="Some Headline"
          articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
          articleUrl="https://url.io"
          commentingConfig={
            Object {
              "account": "dummiy-spotim-id",
            }
          }
          commentsEnabled={true}
          publishedTime="2015-03-13T18:54:58.000Z"
          relatedArticlesVisible={false}
          savingEnabled={true}
          section="Some Section"
          sharingEnabled={true}
        />
      </article>
    </main>
    <AdContainer
      slotName="pixel"
    />
    <AdContainer
      slotName="pixelteads"
    />
    <AdContainer
      slotName="pixelskin"
    />
  </article>
</div>
`;

exports[`4. an inline image 1`] = `
<div>
  <div
    id="article-marketing-header"
  />
  <article
    data-article-identifier="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
    data-article-sectionname="Some Section"
    data-article-template="mainstandard"
    id="article-main"
  >
    <Head
      swgProductId={null}
    />
    <div>
      <AdContainer
        slotName="header"
      />
    </div>
    <main>
      <div />
      <div>
        <div>
          <div>
            <div>
              <div>
                <div>
                  <a
                    href="https://www.thetimes.co.uk/puzzles"
                  >
                    <span />
                  </a>
                  <div>
                    <h3>
                      Puzzles
                    </h3>
                    <button
                      size="small"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        fill="currentcolor"
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 0h24v24H0z"
                          fill="none"
                        />
                        <path
                          d="m12 8-6 6 1.41 1.41L12 10.83l4.59 4.58L18 14z"
                          fill="currentcolor"
                        />
                      </svg>
                    </button>
                  </div>
                </div>
                <p>
                  Challenge yourself with today’s puzzles.
                </p>
              </div>
            </div>
            <hr
              aria-hidden={true}
            />
            <div>
              <div>
                <picture>
                  <div>
                    <div>
                      <svg
                        aria-hidden="true"
                        fill="currentColor"
                        focusable="false"
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 0h24v24H0V0z"
                          fill="none"
                        />
                        <path
                          d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-4.86 8.86l-3 3.87L9 13.14 6 17h12l-3.86-5.14z"
                        />
                      </svg>
                    </div>
                  </div>
                  <img
                    alt="Puzzle thumbnail"
                    src="https://www.thetimes.co.uk/imageserver/image/%2Fpuzzles%2Ficons%2F33b27655-dcc9-421f-906f-b2b10dd26865.png?crop=1250%2C833%2C0%2C0&resize=500"
                    width="40px"
                  />
                </picture>
              </div>
              <a
                href="https://www.thetimes.co.uk/puzzles/crossword"
              >
                <span />
              </a>
              <div>
                <p>
                  Crossword
                </p>
              </div>
            </div>
            <hr
              aria-hidden={true}
            />
            <div>
              <div>
                <picture>
                  <div>
                    <div>
                      <svg
                        aria-hidden="true"
                        fill="currentColor"
                        focusable="false"
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 0h24v24H0V0z"
                          fill="none"
                        />
                        <path
                          d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-4.86 8.86l-3 3.87L9 13.14 6 17h12l-3.86-5.14z"
                        />
                      </svg>
                    </div>
                  </div>
                  <img
                    alt="Puzzle thumbnail"
                    src="https://www.thetimes.co.uk/imageserver/image/%2Fpuzzles%2Ficons%2F33b27655-dcc9-421f-906f-b2b10dd26865.png?crop=1250%2C833%2C0%2C0&resize=500"
                    width="40px"
                  />
                </picture>
              </div>
              <a
                href="https://www.thetimes.co.uk/puzzles/word-puzzles"
              >
                <span />
              </a>
              <div>
                <p>
                  Polygon
                </p>
              </div>
            </div>
            <hr
              aria-hidden={true}
            />
            <div>
              <div>
                <picture>
                  <div>
                    <div>
                      <svg
                        aria-hidden="true"
                        fill="currentColor"
                        focusable="false"
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 0h24v24H0V0z"
                          fill="none"
                        />
                        <path
                          d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-4.86 8.86l-3 3.87L9 13.14 6 17h12l-3.86-5.14z"
                        />
                      </svg>
                    </div>
                  </div>
                  <img
                    alt="Puzzle thumbnail"
                    src="https://www.thetimes.co.uk/imageserver/image/%2Fpuzzles%2Ficons%2F33b27655-dcc9-421f-906f-b2b10dd26865.png?crop=1250%2C833%2C0%2C0&resize=500"
                    width="40px"
                  />
                </picture>
              </div>
              <a
                href="https://www.thetimes.co.uk/puzzles/sudoku"
              >
                <span />
              </a>
              <div>
                <p>
                  Sudoku
                </p>
              </div>
            </div>
            <hr
              aria-hidden={true}
            />
          </div>
        </div>
      </div>
      <article>
        <div
          id="0"
        >
          <div>
            <div>
              <ArticleImage
                captionOptions={
                  Object {
                    "caption": "A Caption",
                    "credits": "Some Credits",
                  }
                }
                imageOptions={
                  Object {
                    "display": "inline",
                    "highResSize": null,
                    "lowResQuality": 3,
                    "lowResSize": 400,
                    "ratio": "9:4",
                    "uri": "https://image-inline.io",
                  }
                }
              />
            </div>
          </div>
        </div>
        <div>
          <h2>
            Sponsored
          </h2>
          <div
            data-parent="group-3"
            id="advert-inarticle-native-1"
          />
          <div
            data-parent="group-3"
            id="advert-inarticle-native-2"
          />
        </div>
        <div
          id="paywall-portal-article-footer"
        />
        <ArticleExtras
          articleHeadline="Some Headline"
          articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
          articleUrl="https://url.io"
          commentingConfig={
            Object {
              "account": "dummiy-spotim-id",
            }
          }
          commentsEnabled={true}
          publishedTime="2015-03-13T18:54:58.000Z"
          relatedArticlesVisible={false}
          savingEnabled={true}
          section="Some Section"
          sharingEnabled={true}
        />
      </article>
    </main>
    <AdContainer
      slotName="pixel"
    />
    <AdContainer
      slotName="pixelteads"
    />
    <AdContainer
      slotName="pixelskin"
    />
  </article>
</div>
`;
